ArgoCD/kyverno_policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-required-labels
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      validate:
        message: "All resources must have 'app' and 'env' labels."
        pattern:
          metadata:
            labels:
              app: ?*
              env: ?*


apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-security-label
spec:
  rules:
  - name: check-security-label
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Pod must have a security=high label"
      pattern:
        metadata:
          labels:
            security: "high"


apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-cpu-memory-limits
spec:
  validateFailureAction: Enforce
  rules:
  - name: check-cpu-memory-limits
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Pod must define both CPU and memory requests and limits"
      pattern:
        spec:
          containers:
          - resources:
              requests:
                cpu: "?*"
                memory: "?*"
              limits:
                cpu: "?*"
                memory: "?*"
